# flotorch-core

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  create_opensearch_local.py  index.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
chunking/: chunking.py  chunking_provider_factory.py  fixedsize_chunking.py  hierarical_chunking.py
config/: config.py  config_provider.py  env_config_provider.py
core/: opensearch_vectorstore.py
embedding/: bedrock_embedding.py  bge_large_embedding.py  cohere_embedding.py  embedding.py  embedding_factory.py  embedding_registry.py  llama_embedding.py  sagemaker_embedding.py  titanv1_embedding.py  titanv2_embedding.py
embedding/guardrails/: guardrail_config.py  guardrails.py  guardrails_embedding.py
fargate/: base_task_processor.py  indexing_processor.py  retriever_processor.py
fargate/handler/: fargate_indexing.Dockerfile  fargate_indexing_handler.py  pyproject.toml
fargate/handler/indexing/: Dockerfile
fargate/handler/retriever/: Dockerfile  fargate_retriever_handler.py
guardrails/: guardrails.py
handlers/: fargate_indexing_handler.py
indexing/: indexing.py
inferencer/: bedrock_inferencer.py  inferencer.py  inferencer_provider_factory.py  sagemaker_inferencer.py
inferencer/guardrails/: guardrails_inferencer.py
logger/: console_logger_provider.py  global_logger.py  logger.py  logger_provider.py
reader/: json_reader.py  pdf_reader.py
rerank/: rerank.py
retriever/: retriever.py
storage/: local_storage.py  s3_storage.py  storage.py  storage_provider_factory.py
storage/db/: db_storage.py  dynamodb.py  open_search.py
storage/db/vector/: __init__.py  bedrock_knowledgebase_storage.py  guardrails_vector_storage.py  no_ops_vector_storage.py  open_search.py  reranked_vector_storage.py  vector_storage.py  vector_storage_factory.py
temp/: bge_large_embedding.py  sagemaker_embedding.py
tests/: opensearch.py  test_chunk.py  test_embed.py  test_storage.py
tests/core/: test_chunk.py  test_embed.py  test_storage.py
updated/chunk/: chunk.py
updated/embed/: embed.py
updated/storage/: storage.py
util/: s3util.py
utils/: bedrock_retry_handler.py  boto_retry_handler.py  otel_util.py  sagemaker_utils.py  tracable.py
